--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ serde_json = "1.0"
 tiberius = "0.12.2"
 tokio-util = { version = "0.6", features = ["full"]}
 futures-util = "0.3.28"
-
+log = "0.4"
+fern = { version = "0.6.2", features = ["date-based"] }
+log2 = "0.1.7"
