--- a/src/json_files/database_config.json
+++ b/src/json_files/database_config.json
@@ -4,5 +4,6 @@
     "db_name":"CaseCafeOnlineWebDB",
     "db_user_name":"sa",
     "db_password":"gitech123*gitech",
+    "toggle_log":0,
     "log_file_path":"/home/sasikumar/Analytics_RND/rust_files/cashcafe_api/src/log/"
 }
