--- a/json_files/database_config.json
+++ b/json_files/database_config.json
@@ -4,6 +4,9 @@
     "db_name":"CaseCafeOnlineWebDB",
     "db_user_name":"sa",
     "db_password":"gitech123*gitech",
-    "toggle_log":1,
-    "log_file_path":"/home/sasikumar/Analytics_RND/rust_files/cashcafe_api/log/"
+    "api_port":8007,
+    "toggle_log":0,
+    "log_file_path":"/home/sasikumar/Analytics_RND/rust_files/cashcafe_api/log/",
+    "error_log":0,
+    "io_log":0
 }
