--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ log = "0.4"
 fern = { version = "0.6.2", features = ["date-based"] }
 log2 = "0.1.7"
 env_logger = "0.10.0"
+base64 = "0.13"
+ftp = "3.0.0"
