--- a/json_files/database_config.json
+++ b/json_files/database_config.json
@@ -8,5 +8,9 @@
     "toggle_log":1,
     "log_file_path":"/home/sasikumar/Analytics_RND/rust_files/cashcafe_api/log/",
     "error_log":0,
-    "io_log":0
+    "io_log":0,
+    "ftp_host":"192.168.10.225:21",
+    "ftp_name":"uitest",
+    "ftp_password":"u1Test2*",
+    "sms_email_url":"http://192.168.10.227/CashCafeSmsEmailApi/api/user/sendEmail"
 }
