removed rsa and implemented AES

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,7 @@ base64 = "0.13"
 ftp = "3.0.0"
 amiquip = "0.4.2"
 jsonwebtoken = "8.0.1"
-openssl = "0.10.35"
+hex = "0.4.3"
+aes="0.7.5"
+block-modes="0.8.1"
+hex-literal="0.3.3"
